demojam/submissions/syntax/E2/E2soln/src/error.txt
./e2soln/Graph.java:8: error: class, interface, or enum expected
I AM A SYNTAX ERROR
^
1 error
